--- a/logicTableDescription.html
+++ b/logicTableDescription.html
@@ -14,7 +14,7 @@
 <body>
 <div id="container">
 		<div id = "logo">
-		<h1>Projekt "Przelicznik Wartości Logicznych</h1>
+		<h1>Projekt "Przelicznik Wartości Logicznych"</h1>
 		</div>
 		<div id="nav">
 		Powrót do strony głównej <br />
