--- a/logicTableDescription.html
+++ b/logicTableDescription.html
@@ -28,7 +28,7 @@
 Zadaniem przelicznika jest sprawdzanie wartości nawet najcięższych formuł logicznych. 
 Inspiracją do stworzenia projektu był prof. dr hab. inż Antoni Ligęza, który w niezwykle przejrzysty sposób przedstawił nam istotę logiki. Był naszą motywacją do stworzenia czegoś, co ułatwi zrozumienie pewnych zagadnień tego przedmiotu. 
 Interfejs programu jest nieskomplikowany, co daje użytkownikowi możliwość korzystania z kalkulatora w sposób bardzo intuicyjny. Wystarczy wybrać jedną z dostępnych opcji i wpisać formułę. Kalkulator rozwiąże problem poprzez stworzenie tabeli logicznej z wartościami 0 i 1.
-Więcej informacji można znaleźć klikając w ten <a hief = "https://github.com/AGH-Narzedzia-Informatyczne/Przelicznik_Wartosci_-Logicznych/wiki" > link </a>: 
+Więcej informacji można znaleźć klikając w ten <a href = "https://github.com/AGH-Narzedzia-Informatyczne/Przelicznik_Wartosci_-Logicznych/wiki" > link </a>. 
 Tam również znajduje się dokładny instruktaż jak pobrać i korzystać z programu.
 		</div>
 		<div id="ad">
