--- a/logicTableDescription.html
+++ b/logicTableDescription.html
@@ -35,7 +35,7 @@ Tam również znajduje się dokładny instruktaż jak pobrać i korzystać z pro
 		<!--Tu miała być jakaś grafika, ale nie chce mi się jej szukać.-->
 		</div>
 		<div id="footer">
-		Antoni Lasoń.
+		Designed and created by Antoni Lasoń.
 		</div>
 		
 	</div>
