--- a/logicTableDescription.html
+++ b/logicTableDescription.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Strona po krótce opisująca projekt przelicznika wartości logicznych"/>
 	<meta name="keywords" content="Antoni, Lasoń, Logic, Table, Team, Przelicznik_Wartosci_-Logicznych, Logic_Table_Team, Logic_Table, kalkulator, wartości, logicznych, logic, calculator, GitHub, github, AGH, agh"/>
 	<link rel="stylesheet" href="cssfileforlogictable.css" type="text/css"/>
-	<link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Lato&amp;subset=latin-ext" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 	
 </head>
 
@@ -17,10 +17,10 @@
 		<h1>Projekt "Przelicznik Wartości Logicznych"</h1>
 		</div>
 		<div id="nav">
-		Powrót do strony głównej <br />
-		Wiki projektu<br />
-		Kod źródłowy<br />
-		Aplikacja do pobrania<br />
+		<a href = "https://antonilason.github.io/" > Powrót do strony głównej </a> <br />
+		<a href = "https://github.com/AGH-Narzedzia-Informatyczne/Przelicznik_Wartosci_-Logicznych/wiki" > Wiki projektu </a> <br />
+		<a href = "https://github.com/AGH-Narzedzia-Informatyczne/Przelicznik_Wartosci_-Logicznych" > Kod źródłowy </a> <br />
+		<a href = "https://github.com/AGH-Narzedzia-Informatyczne/Przelicznik_Wartosci_-Logicznych/blob/main/kalkulatorv0.exe" > Aplikacja do pobrania </a> <br />
 		</div>
 		
 		<div id ="content">
@@ -35,7 +35,7 @@ Tam również znajduje się dokładny instruktaż jak pobrać i korzystać z pro
 		<!--Tu miała być jakaś grafika, ale nie chce mi się jej szukać.-->
 		</div>
 		<div id="footer">
-		Designed and created by Antoni Lasoń.
+		Designed and created by Antoni Lasoń. Using <a href="https://fonts.google.com/specimen/Open+Sans?preview.text=Dziwne%20znaki%20%C4%85%C4%99%C5%84%C5%82%C3%B3%C5%BC%C5%BA%C4%87&preview.text_type=custom&sidebar.open=true&selection.family=Open+Sans" > Google Fonts</a>
 		</div>
 		
 	</div>
